--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,8 @@
     android:orientation="vertical">
 
     <TextView
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="100dp"
         android:id="@+id/testview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
